--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "bootstrap-vue": "^2.0.0-rc.24",
     "cross-env": "^5.2.0",
     "flatpickr": "^4.6.1",
+    "lodash": "^4.17.13",
+    "lodash.template": "^4.5.0",
+    "mixin-deep": "^1.3.2",
     "nouislider": "^14.0.1",
     "nuxt": "^2.8.1",
+    "set-value": "^2.0.1",
     "v-click-outside": "^2.1.3",
     "vue-flatpickr-component": "^8.1.2",
     "vue-lazyload": "^1.2.6",
