--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.0.0-rc.24",
     "cross-env": "^5.2.0",
     "flatpickr": "^4.6.1",
+    "frontmatter-markdown-loader": "^3.0.0",
     "lodash": "^4.17.13",
     "lodash.template": "^4.5.0",
     "mixin-deep": "^1.3.2",
