--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "@nuxtjs/axios": "^5.5.4",
-    "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "bootstrap": "^4.3.1",
+    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/pwa": "^3.3.5",
+    "bootstrap": "4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
     "cross-env": "^5.2.0",
     "flatpickr": "^4.6.1",
     "frontmatter-markdown-loader": "^3.0.0",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "mixin-deep": "^1.3.2",
     "nouislider": "^14.0.1",
-    "nuxt": "^2.8.1",
+    "nuxt": "^2.15.3",
     "set-value": "^2.0.1",
     "v-click-outside": "^2.1.3",
+    "vue": "2.6.12",
     "vue-flatpickr-component": "^8.1.2",
     "vue-lazyload": "^1.2.6",
     "vue2-transitions": "^0.3.0"
@@ -33,8 +34,8 @@
   "devDependencies": {
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "3.1.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.7",
     "prettier": "1.18.2",
     "sass-loader": "^7.1.0"
   }
