--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zack Proser's Portfolio",
+  "name": "zack-proser-portfolio",
   "version": "1.1.0",
   "description": "Zack Proser's art and software portfolio",
   "author": "sames",
