--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^5.2.0",
     "flatpickr": "^4.6.1",
     "frontmatter-markdown-loader": "^3.0.0",
+    "highlight.js": "^10.7.2",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "mixin-deep": "^1.3.2",
@@ -28,6 +29,7 @@
     "v-click-outside": "^2.1.3",
     "vue": "2.6.12",
     "vue-flatpickr-component": "^8.1.2",
+    "vue-highlight.js": "^3.1.0",
     "vue-lazyload": "^1.2.6",
     "vue2-transitions": "^0.3.0"
   },
