--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "set-value": "^4.0.1",
     "v-click-outside": "^2.1.3",
     "vue": "2.6.12",
+    "vue-analytics": "^5.22.1",
     "vue-flatpickr-component": "^8.1.2",
     "vue-lazyload": "^1.2.6",
     "vue2-transitions": "^0.3.0"
