--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "mixin-deep": "^1.3.2",
+    "node-sass": "^4.0.0",
     "nouislider": "^14.0.1",
-    "nuxt": "^2.15.3",
+    "nuxt": "2.15.8",
     "sass": "^1.52.3",
     "set-value": "^4.0.1",
     "v-click-outside": "^2.1.3",
-    "vue": "2.6.12",
+    "vue": "2.7.14",
     "vue-analytics": "^5.22.1",
     "vue-flatpickr-component": "^8.1.2",
     "vue-lazyload": "^1.2.6",
