--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.0",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "bootstrap": "4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
